# camcontrol

./: .gitignore  CMakeLists.txt  LICENSE  README.md  camera-control.glade  main.c  pixel.c  pixel.h  saveimage.c  saveimage.h  utils.c  utils.h
